[gd_scene load_steps=77 format=2]

[ext_resource path="res://player/sprites/Attack1.png" type="Texture" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://utilities/StateMachine/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://player/states/Air.gd" type="Script" id=4]
[ext_resource path="res://player/states/Idle.gd" type="Script" id=5]
[ext_resource path="res://player/states/Run.gd" type="Script" id=6]
[ext_resource path="res://player/sprites/dust/dust_texture.png" type="Texture" id=7]
[ext_resource path="res://player/sprites/Run.png" type="Texture" id=8]
[ext_resource path="res://player/PlayerHitBox.gd" type="Script" id=9]
[ext_resource path="res://player/sprites/Idle.png" type="Texture" id=10]
[ext_resource path="res://player/PlayerHurtBox.gd" type="Script" id=11]
[ext_resource path="res://player/states/Knockback.gd" type="Script" id=12]
[ext_resource path="res://player/sprites/Take hit.png" type="Texture" id=13]
[ext_resource path="res://shader/hit/Hit.tres" type="Shader" id=14]
[ext_resource path="res://player/particles/dust.tres" type="Material" id=15]
[ext_resource path="res://player/DebugWindow.gd" type="Script" id=16]
[ext_resource path="res://player/camera/Camera2D.gd" type="Script" id=17]
[ext_resource path="res://player/AudioPlayerSFX.gd" type="Script" id=18]
[ext_resource path="res://player/sfx/jump/12_human_jump_1.wav" type="AudioStream" id=19]
[ext_resource path="res://player/sfx/jump/12_human_jump_3.wav" type="AudioStream" id=20]
[ext_resource path="res://player/sfx/jump/12_human_jump_2.wav" type="AudioStream" id=21]
[ext_resource path="res://player/sfx/land/13_human_jump_land_2.wav" type="AudioStream" id=22]
[ext_resource path="res://player/sfx/land/13_human_jump_land_1.wav" type="AudioStream" id=23]
[ext_resource path="res://player/sfx/hit/hit3.wav" type="AudioStream" id=24]
[ext_resource path="res://player/sfx/hit/hit1.wav" type="AudioStream" id=25]
[ext_resource path="res://player/sfx/hit/hit2.wav" type="AudioStream" id=26]
[ext_resource path="res://player/sfx/hit/hit5.wav" type="AudioStream" id=27]
[ext_resource path="res://player/sfx/hit/hit4.wav" type="AudioStream" id=28]
[ext_resource path="res://player/sprites/Death.png" type="Texture" id=29]
[ext_resource path="res://player/sprites/Jump.png" type="Texture" id=30]
[ext_resource path="res://player/sprites/Fall.png" type="Texture" id=31]
[ext_resource path="res://player/Death.gd" type="Script" id=32]
[ext_resource path="res://player/Attack.gd" type="Script" id=33]

[sub_resource type="CanvasItemMaterial" id=4]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ShaderMaterial" id=14]
shader = ExtResource( 14 )
shader_param/active = false

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 100, 120 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 52 )

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 15, 51 )

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Skin/Body:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Skin/Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Skin/Body:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 8 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Skin/Body:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 10 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Skin/HitBox/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 120, -120 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Skin/HitBox/CollisionShape2D:shape")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ SubResource( 33 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Skin/HitBox/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=12]
resource_name = "attack"
length = 0.8
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Skin/Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Skin/Body:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Skin/Body:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Skin/Body:material:shader_param/active")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Skin/HitBox/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 120, -120 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Skin/HitBox/CollisionShape2D:shape")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 33 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Skin/HitBox/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("StateMachine/Attack")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "change_state_after_attack"
} ]
}

[sub_resource type="Animation" id=16]
resource_name = "death"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Skin/Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 29 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Skin/Body:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Skin/Body:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Skin/Body:material:shader_param/active")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_death"
} ]
}

[sub_resource type="Animation" id=44]
resource_name = "fall"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Skin/Body:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Skin/Body:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Skin/Body:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 31 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Skin/Body:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=15]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Skin/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Skin/Body:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 10 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Skin/Body:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Skin/Body:material:shader_param/active")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=43]
resource_name = "jump"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Skin/Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 30 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Skin/Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Skin/Body:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Skin/Body:material:shader_param/active")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=35]
resource_name = "run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Skin/Body:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Skin/Body:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Skin/Body:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Skin/Body:material:shader_param/active")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=17]
resource_name = "take_hit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Skin/Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 13 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Skin/Body:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Skin/Body:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Skin/Body:material:shader_param/active")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=52]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=48]
animation = "fall"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=45]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "run"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "take_hit"

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachineTransition" id=47]

[sub_resource type="AnimationNodeStateMachineTransition" id=49]

[sub_resource type="AnimationNodeStateMachineTransition" id=50]

[sub_resource type="AnimationNodeStateMachineTransition" id=51]

[sub_resource type="AnimationNodeStateMachineTransition" id=53]

[sub_resource type="AnimationNodeStateMachineTransition" id=54]

[sub_resource type="AnimationNodeStateMachineTransition" id=55]

[sub_resource type="AnimationNodeStateMachineTransition" id=56]

[sub_resource type="AnimationNodeStateMachineTransition" id=57]

[sub_resource type="AnimationNodeStateMachineTransition" id=58]

[sub_resource type="AnimationNodeStateMachineTransition" id=59]

[sub_resource type="AnimationNodeStateMachineTransition" id=60]

[sub_resource type="AnimationNodeStateMachine" id=29]
states/attack/node = SubResource( 18 )
states/attack/position = Vector2( 374, -59 )
states/death/node = SubResource( 52 )
states/death/position = Vector2( 860, -156 )
states/fall/node = SubResource( 48 )
states/fall/position = Vector2( 101, -71 )
states/idle/node = SubResource( 20 )
states/idle/position = Vector2( 101, 102 )
states/jump/node = SubResource( 45 )
states/jump/position = Vector2( 374, -254 )
states/run/node = SubResource( 36 )
states/run/position = Vector2( 514, 86 )
states/take_hit/node = SubResource( 21 )
states/take_hit/position = Vector2( 532, 233 )
transitions = [ "idle", "take_hit", SubResource( 24 ), "idle", "attack", SubResource( 25 ), "attack", "idle", SubResource( 26 ), "idle", "run", SubResource( 37 ), "run", "idle", SubResource( 38 ), "run", "attack", SubResource( 39 ), "run", "take_hit", SubResource( 41 ), "attack", "run", SubResource( 42 ), "idle", "jump", SubResource( 46 ), "run", "jump", SubResource( 47 ), "jump", "fall", SubResource( 49 ), "fall", "idle", SubResource( 50 ), "fall", "run", SubResource( 51 ), "jump", "death", SubResource( 53 ), "attack", "death", SubResource( 54 ), "fall", "death", SubResource( 55 ), "idle", "death", SubResource( 56 ), "run", "death", SubResource( 57 ), "take_hit", "death", SubResource( 58 ), "run", "fall", SubResource( 59 ), "take_hit", "run", SubResource( 60 ) ]
start_node = "idle"
end_node = "death"
graph_offset = Vector2( -54, -223.492 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=30]

[node name="Player" type="KinematicBody2D"]
collision_mask = 4
script = ExtResource( 2 )

[node name="Skin" type="Node2D" parent="."]

[node name="DustParticles2D" type="Particles2D" parent="Skin"]
material = SubResource( 4 )
position = Vector2( -16, 0 )
emitting = false
amount = 32
local_coords = false
process_material = ExtResource( 15 )
texture = ExtResource( 7 )

[node name="Body" type="Sprite" parent="Skin"]
material = SubResource( 14 )
position = Vector2( 0, -84 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )
hframes = 8

[node name="PositionBloodParticles" type="Position2D" parent="Skin"]

[node name="HitBox" type="Area2D" parent="Skin"]
collision_mask = 0
script = ExtResource( 9 )
damage = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skin/HitBox"]
position = Vector2( 120, -120 )
shape = SubResource( 33 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.5, -52 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -3, -60 )
current = true
limit_left = 0
limit_top = 0
limit_bottom = 1620
limit_smoothed = true
smoothing_enabled = true
script = ExtResource( 17 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, -51 )
shape = SubResource( 32 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 11 )
anims/attack = SubResource( 12 )
anims/death = SubResource( 16 )
anims/fall = SubResource( 44 )
anims/idle = SubResource( 15 )
anims/jump = SubResource( 43 )
anims/run = SubResource( 35 )
anims/take_hit = SubResource( 17 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 29 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 30 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
initial_state = NodePath("Air")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Air" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="CoyoteTimer" type="Timer" parent="StateMachine/Air"]
wait_time = 0.2
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="StateMachine/Air"]
wait_time = 0.1
one_shot = true

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Knockback" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource( 32 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 33 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DebugWindow" type="Control" parent="CanvasLayer"]
margin_right = 186.0
margin_bottom = 94.0
script = ExtResource( 16 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/DebugWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/DebugWindow/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
custom_constants/separation = 5

[node name="LabelState" type="Label" parent="CanvasLayer/DebugWindow/ColorRect/VBoxContainer"]
margin_right = 176.0
margin_bottom = 14.0
size_flags_vertical = 1
size_flags_stretch_ratio = 0.0
text = "Test"
align = 1
valign = 1

[node name="LabelVelocity" type="Label" parent="CanvasLayer/DebugWindow/ColorRect/VBoxContainer"]
margin_top = 19.0
margin_right = 176.0
margin_bottom = 33.0
size_flags_vertical = 1
size_flags_stretch_ratio = 0.0
text = "Test"
align = 1
valign = 1

[node name="LabelGravity" type="Label" parent="CanvasLayer/DebugWindow/ColorRect/VBoxContainer"]
margin_top = 38.0
margin_right = 176.0
margin_bottom = 52.0
size_flags_vertical = 1
size_flags_stretch_ratio = 0.0
text = "Test"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/DebugWindow/ColorRect/VBoxContainer"]
margin_top = 57.0
margin_right = 176.0
margin_bottom = 84.0
size_flags_vertical = 3

[node name="Coyote" type="ColorRect" parent="CanvasLayer/DebugWindow/ColorRect/VBoxContainer/HBoxContainer"]
margin_right = 86.0
margin_bottom = 27.0
size_flags_horizontal = 3

[node name="JumpBuffer" type="ColorRect" parent="CanvasLayer/DebugWindow/ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 90.0
margin_right = 176.0
margin_bottom = 27.0
size_flags_horizontal = 3

[node name="AudioPlayerSFX" type="AudioStreamPlayer2D" parent="."]
script = ExtResource( 18 )
jump_sfx_arr = [ ExtResource( 19 ), ExtResource( 21 ), ExtResource( 20 ) ]
land_sfx_arr = [ ExtResource( 23 ), ExtResource( 22 ) ]
hit_sfx_arr = [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 24 ), ExtResource( 28 ), ExtResource( 27 ) ]

[connection signal="timeout" from="StateMachine/Air/CoyoteTimer" to="StateMachine/Air" method="_on_CoyoteTimer_timeout"]
[connection signal="timeout" from="StateMachine/Air/JumpBufferTimer" to="StateMachine/Air" method="_on_JumpBufferTimer_timeout"]
